2007-06-07  Bastien Nocera  <hadess@hadess.net>

	* gedit/gedit-metadata-manager.c:
	(gedit_metadata_manager_arm_timeout),
	(gedit_metadata_manager_save):
	Remove bits of evince left-overs, should fix #444921

2007-06-05  Bastien Nocera  <hadess@hadess.net>

	* gedit/gedit-metadata-manager.c:
	(gedit_metadata_manager_arm_timeout),
	(gedit_metadata_manager_init), (gedit_metadata_manager_shutdown),
	(gedit_metadata_manager_set), (gedit_metadata_manager_save):
	Avoid having an always-running timeout, uses power (Closes: #444270)

2007-05-12  Steve Frécinaux  <code@istique.net>

	* plugins/externaltools/data/build.desktop.in: Use Ctrl+F8 as the
	shortcut for the Build tool (workaround bug #406176).

	* plugins/externaltools/data/build.tool.in: Look recursively for
	Makefiles in the parent directories of the current file.

2007-04-15  Pascal Terjan  <pterjan@linuxfr.org>

	 gedit/gedit-document-saver.c: Don't fail when we cannot change
	rights on the backup file if it was not needed (e.g. on FAT).
	Bug #427548

=== gedit 2.18.1 ===

2007-04-10  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.18.1 released

2007-03-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/dialogs/gedit-close-confirmation-dialog.c: escape
	gmarkup in document name. Bug #422228.

2007-03-24  Paolo Maggi  <paolo@gnome.org>

	* plugins/taglist/Makefile.am: call gzip with "--best -f" args
	* plugins/taglist/gedit-taglist-plugin-parser.c
	(parse_taglist_dir): fix a little bug when searching for .tags.gz
	files
	
	Total size of tags files is now 540K

2007-03-21  Steve Frécinaux  <code@istique.net>

	* configure.ac: add AC_PATH_PROG for gzip.

	* plugins/taglist/gedit-taglist-plugin-parser.c: take advantage of
	libxml built-in gzip support.

	* plugins/taglist/Makefile.am: generate gzip'ed tag files.

	Total size of tags files felt from 6.7M to 560K (~92%)

2007-03-21  Steve Frécinaux  <code@istique.net>

	* plugins/taglist/HTML.tags.xml.in: