@@ -1,3 +1,9 @@
+2007-06-07  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-document.c: make sure to not place the cursor
+	in an invalid position when persisting the position from
+	metadata.
+
 2007-06-07  Bastien Nocera  <hadess@hadess.net>
 
 	* gedit/gedit-metadata-manager.c:
